<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/hogwarts_landing_image"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/banner_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/landing_screen_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/banner_text_size"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/app_bottom_margin"
        android:background="@color/colorAccent"
        android:onClick="startQuiz"
        android:text="@string/start"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hint_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="@dimen/quiz_screen_right_border"
                android:layout_marginLeft="@dimen/quiz_screen_left_border"
                android:layout_marginRight="@dimen/quiz_screen_right_border"
                android:layout_marginStart="@dimen/quiz_screen_left_border"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:layout_marginEnd="@dimen/quiz_screen_right_border"
                android:layout_marginLeft="@dimen/quiz_screen_left_border"
                android:layout_marginRight="@dimen/quiz_screen_right_border"
                android:layout_marginStart="@dimen/quiz_screen_left_border"
                android:textColor="@android:color/black"
                android:textSize="@dimen/quiz_text_size"
                android:typeface="serif"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radio_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_button_bottom_margin"
                    android:layout_marginEnd="@dimen/quiz_screen_right_border"
                    android:layout_marginLeft="@dimen/quiz_screen_left_border"
                    android:layout_marginRight="@dimen/quiz_screen_right_border"
                    android:layout_marginStart="@dimen/quiz_screen_left_border"
                    android:paddingLeft="@dimen/radio_button_text_padding"
                    android:paddingStart="@dimen/radio_button_text_padding"
                    android:textAppearance="@style/ChoicesText"/>

                <RadioButton
                    android:id="@+id/radio_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_button_bottom_margin"
                    android:layout_marginEnd="@dimen/quiz_screen_right_border"
                    android:layout_marginLeft="@dimen/quiz_screen_left_border"
                    android:layout_marginRight="@dimen/quiz_screen_right_border"
                    android:layout_marginStart="@dimen/quiz_screen_left_border"
                    android:paddingLeft="@dimen/radio_button_text_padding"
                    android:paddingStart="@dimen/radio_button_text_padding"
                    android:textAppearance="@style/ChoicesText"/>

                <RadioButton
                    android:id="@+id/radio_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_button_bottom_margin"
                    android:layout_marginEnd="@dimen/quiz_screen_right_border"
                    android:layout_marginLeft="@dimen/quiz_screen_left_border"
                    android:layout_marginRight="@dimen/quiz_screen_right_border"
                    android:layout_marginStart="@dimen/quiz_screen_left_border"
                    android:paddingLeft="@dimen/radio_button_text_padding"
                    android:paddingStart="@dimen/radio_button_text_padding"
                    android:textAppearance="@style/ChoicesText"/>

                <RadioButton
                    android:id="@+id/radio_fourth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_button_bottom_margin"
                    android:layout_marginEnd="@dimen/quiz_screen_right_border"
                    android:layout_marginLeft="@dimen/quiz_screen_left_border"
                    android:layout_marginRight="@dimen/quiz_screen_right_border"
                    android:layout_marginStart="@dimen/quiz_screen_left_border"
                    android:paddingLeft="@dimen/radio_button_text_padding"
                    android:paddingStart="@dimen/radio_button_text_padding"
                    android:textAppearance="@style/ChoicesText"/>

            </RadioGroup>

            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:hint="@string/spell_name"
                android:inputType="text"
                android:maxLines="1"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_1"
                android:textAppearance="@style/ChoicesText"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_2"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_3"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_4"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_5"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_option_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:onClick="onCheckboxClicked"
                android:text="@string/checkbox_6"
                android:textSize="@dimen/quiz_text_size"
                android:visibility="gone"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_bottom_margin"
                android:layout_marginEnd="@dimen/quiz_screen_right_border"
                android:layout_marginLeft="@dimen/quiz_screen_left_border"
                android:layout_marginRight="@dimen/quiz_screen_right_border"
                android:layout_marginStart="@dimen/quiz_screen_left_border"
                android:background="@color/colorAccent"
                android:onClick="submitAndNext"
                android:text="@string/submit"
                android:textAppearance="@style/ButtonText"
                android:visibility="gone"/>

            <Button
                android:id="@+id/play_again_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/quiz_screen_right_border"
                android:layout_marginLeft="@dimen/quiz_screen_left_border"
                android:layout_marginRight="@dimen/quiz_screen_right_border"
                android:layout_marginStart="@dimen/quiz_screen_left_border"
                android:background="@color/colorAccent"
                android:onClick="onPlayAgainClick"
                android:text="@string/play_again"
                android:textAppearance="@style/ButtonText"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>